--- a/morssey/package.json
+++ b/morssey/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "morse-decoder": "^3.0.1",
+    "morse-mp3": "^0.2.5",
+    "morse-pro": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-media-recorder": "^1.6.3",
