--- a/morssey/package.json
+++ b/morssey/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.6.5",
     "morse-decoder": "^3.0.1",
     "morse-mp3": "^0.2.5",
